--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux": "^5.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
