--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
