--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "2.15.4",
     "redux": "^5.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
